k8s/deployment/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: testlinkerd
    app.kubernetes.io/version: v10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: testlinkerd/web
        imagePullPolicy: IfNotPresent
        args:
        - --target
        - world:50040
        volumeMounts:
        - name: app-tls
          mountPath: "/creds"
          readOnly: true
      volumes:
      - name: app-tls
        secret:
          secretName: web-tls
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
  - name: http
    port: 8080
    targetPort: 8080
