k8s/deployment/world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world
  namespace: testlinkerd
  labels:
    app.kubernetes.io/name: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: world
  template:
    metadata:
      labels:
        app: world
    spec:
      containers:
      - image: testlinkerd/world
        imagePullPolicy: IfNotPresent
        name: world
        ports:
        - containerPort: 50040
          name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: world
  namespace: testlinkerd
spec:
  selector:
    app: world
  ports:
  - name: grpc
    port: 50040
    targetPort: 50040
